# to-tui

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  justfile
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/intel/: conventions.json  graph.db  index.json  summary.md
.planning/intel/entities/: api.md  app-state.md  mcp-server.md  storage.md  todo-item.md  todo-list.md  ui.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-clipboard-support/: 01-VERIFICATION.md
.planning/phases/02-scrolling-mouse-support/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-todo-priority-system/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-claude-code-plugin-configuration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/09-host-api-layer/: 09-01-PLAN.md  (+10 more)
.planning/research/: ARCHITECTURE-PLUGINS.md  ARCHITECTURE.md  FEATURES.md  PITFALLS-PLUGINS.md  PITFALLS.md  STACK.md  SUMMARY.md
bruno/TODO/: Create Child Todo.bru  Create Todo.bru  Delete Todo.bru  List Todos.bru  Mark Complete.bru  Update Todo.bru  collection.bru
crates/totui-plugin-interface/: Cargo.toml
scripts/: install-binary.sh  install.sh
src/: cli.rs  clipboard.rs  config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
src/app/: event.rs  mode.rs  state.rs
src/keybindings/: mod.rs
src/mcp/: errors.rs  schemas.rs  server.rs
src/plugin/: actions.rs  command_executor.rs  config.rs  ffi_convert.rs  hooks.rs  host_impl.rs  installer.rs  loader.rs  manager.rs  manifest.rs  marketplace.rs  mod.rs
src/project/: mod.rs  registry.rs
src/storage/: database.rs  file.rs  markdown.rs  metadata.rs  migration.rs  mod.rs  rollover.rs  ui_cache.rs
src/todo/: hierarchy.rs  item.rs  list.rs  mod.rs  priority.rs  state.rs
src/ui/: mod.rs  theme.rs
src/utils/: cursor.rs  mod.rs  paths.rs  unicode.rs  upgrade.rs  version_check.rs
(+115 files in other folders)
