[workspace]
members = [".", "crates/totui-plugin-interface"]
resolver = "2"

[package]
name = "to-tui"
version = "0.5.6"
edition = "2024"

[lib]
name = "to_tui"
path = "src/lib.rs"

[[bin]]
name = "totui"
path = "src/main.rs"

[[bin]]
name = "totui-mcp"
path = "src/bin/totui-mcp.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
toml = "0.9"
pulldown-cmark = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
arboard = { version = "3.6", features = ["wayland-data-control"] }
dirs = "6.0"
rusqlite = { version = "0.38", features = ["bundled"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
notify = "8.2.0"
dialoguer = "0.11"
unicode-width = "0.2"
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "stream"] }
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }
futures-util = "0.3"
tempfile = "3.13"
flate2 = "1.0"
tar = "0.4"
open = "5"
totui-plugin-interface = { path = "crates/totui-plugin-interface" }
abi_stable = "0.11"

[dev-dependencies]
pretty_assertions = "1.4"
